--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,15 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-upload_port = /dev/ttyUSB0
-upload_speed = 921600
-monitor_port = /dev/ttyUSB0
-monitor_speed = 115200
+
+upload_protocol = espota
+upload_port = 192.168.2.20
+
+;upload_port = /dev/ttyUSB0
+;upload_speed = 921600
+
+;monitor_port = /dev/ttyUSB0
+;monitor_speed = 115200
 lib_deps = 
 	arduino-libraries/NTPClient
 	bblanchon/ArduinoJson
