--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 
-upload_protocol = espota
+;upload_protocol = espota
 upload_port = 192.168.2.20
 
 ;upload_port = /dev/ttyUSB0
