--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,8 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-
-;upload_protocol = espota
-;upload_port = 192.168.2.20  ; my black alarm clock
-;upload_port = 192.168.2.56	 ; my yellow alarm clock
-;upload_port = 192.168.2.18	 ; my blue alarm clock
-
 upload_port = /dev/ttyUSB0
 upload_speed = 921600
-
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
 lib_deps = 
@@ -29,4 +22,4 @@ lib_deps =
 	Wire
 	bodmer/TFT_eSPI
 	paulstoffregen/Time
-	
+	dushyantahuja/SimpleWeather@^1.0.2
