--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,11 @@ framework = arduino
 
 ;upload_protocol = espota
 ;upload_port = 192.168.2.20  ; my black alarm clock
-;upload_port = 192.168.2.56	 ; my yellow alarm clock
+upload_port = 192.168.2.56	 ; my yellow alarm clock
 ;upload_port = 192.168.2.18	 ; my blue alarm clock
 
-upload_port = /dev/ttyUSB0
-upload_speed = 921600
+;upload_port = /dev/ttyUSB0
+;upload_speed = 921600
 
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
