--- a/platformio.ini
+++ b/platformio.ini
@@ -13,17 +13,14 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 
-;upload_protocol = espota
-;upload_port = 192.168.2.20  ; my black alarm clock
-;upload_port = 192.168.2.23	 ; my yellow alarm clock
-;upload_port = 192.168.2.18	 ; my blue alarm clock
+;upload_port = 192.168.2.18
+;upload_port = 192.168.2.23
 
 upload_port = /dev/ttyUSB0
 upload_speed = 921600
 
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
-
 lib_deps = 
 	arduino-libraries/NTPClient
 	bblanchon/ArduinoJson
@@ -32,4 +29,14 @@ lib_deps =
 	paulstoffregen/Time
 	dushyantahuja/SimpleWeather@^1.0.2
 	pschneider67/psGpio@^1.0.1
+	tzapu/WiFiManager@^0.16.0
 
+; dislay setup
+build_flags =
+-DUSER_SETUP_LOADED = 1
+-DILI9341_DRIVER = 1
+-DTFT_WIDTH = 320
+-DTFT_HEIGHT = 240
+-DTFT_CS = 5 	; D1
+-DTFT_DC = 2 	; D4
+-DTFT_RST = -1	; not used
