--- a/platformio.ini
+++ b/platformio.ini
@@ -10,33 +10,24 @@
 
 [env:d1_mini]
 platform = espressif8266
-board = d1_mini
+board = d1_mini_lite
+
+; change microcontroller
+board_build.mcu = esp8266
+
+; change MCU frequency
+board_build.f_cpu = 80000000L
+
 framework = arduino
 
-;upload_port = 192.168.2.18
-;upload_port = 192.168.2.23
+;upload_protocol = espota
+;upload_port = 192.168.2.20  ; my black alarm clock
+;upload_port = 192.168.2.56	 ; my yellow alarm clock
+;upload_port = 192.168.2.18	 ; my blue alarm clock
 
 upload_port = /dev/ttyUSB0
 upload_speed = 921600
 
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
-lib_deps = 
-	arduino-libraries/NTPClient
-	bblanchon/ArduinoJson
-	Wire
-	bodmer/TFT_eSPI
-	paulstoffregen/Time
-	dushyantahuja/SimpleWeather@^1.0.2
-	pschneider67/psGpio@^1.0.1
-	tzapu/WiFiManager@^0.16.0
 
-; dislay setup
-build_flags =
--DUSER_SETUP_LOADED = 1
--DILI9341_DRIVER = 1
--DTFT_WIDTH = 320
--DTFT_HEIGHT = 240
--DTFT_CS = 5 	; D1
--DTFT_DC = 2 	; D4
--DTFT_RST = -1	; not used
