--- a/platformio.ini
+++ b/platformio.ini
@@ -11,23 +11,17 @@
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini_lite
-
-; change microcontroller
 board_build.mcu = esp8266
-
-; change MCU frequency
 board_build.f_cpu = 80000000L
-
 framework = arduino
-
-;upload_protocol = espota
-;upload_port = 192.168.2.20  ; my black alarm clock
-;upload_port = 192.168.2.56	 ; my yellow alarm clock
-;upload_port = 192.168.2.18	 ; my blue alarm clock
-
 upload_port = /dev/ttyUSB0
 upload_speed = 921600
-
 monitor_port = /dev/ttyUSB0
-monitor_speed = 115200
-
+;monitor_speed = 115200
+monitor_speed = 74880
+lib_deps = 
+	bodmer/TFT_eSPI
+	paulstoffregen/Time
+	bblanchon/ArduinoJson
+	pschneider67/psGpio@^1.0.1
+	tzapu/WiFiManager
