--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,13 @@ board = d1_mini_lite
 board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
 framework = arduino
-upload_port = /dev/ttyUSB0
+;upload_port = /dev/ttyUSB0
+upload_port = /dev/ttyUSB1
 upload_speed = 921600
-monitor_port = /dev/ttyUSB0
-;monitor_speed = 115200
-monitor_speed = 74880
+;monitor_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB1
+monitor_speed = 115200
+;monitor_speed = 74880
 lib_deps = 
 	bodmer/TFT_eSPI
 	paulstoffregen/Time
