index on (no branch): 185e42e new structure and class handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,18 +12,17 @@
 platform = espressif8266
 board = d1_mini_lite
 board_build.mcu = esp8266
-board_build.f_cpu = 80000000L
+board_build.f_cpu = 80000000
+board_build.filesystem = littlefs
 framework = arduino
 upload_port = /dev/ttyUSB0
-;upload_port = /dev/ttyUSB1
 upload_speed = 921600
 monitor_port = /dev/ttyUSB0
-;monitor_port = /dev/ttyUSB1
 monitor_speed = 115200
-;monitor_speed = 74880
 lib_deps = 
-	bodmer/TFT_eSPI
 	paulstoffregen/Time
 	bblanchon/ArduinoJson
 	pschneider67/psGpio@^1.0.1
 	tzapu/WiFiManager
+	bodmer/TFT_eSPI
+	
